@@ -557,7 +557,11 @@ PHP_FUNCTION(proc_nice)
 	errno = 0;
 	php_ignore_value(nice(pri));
 	if (errno) {
+#ifdef PHP_WIN32
+		php_error_docref(NULL, E_WARNING, php_win_err());
+#else
 		php_error_docref(NULL, E_WARNING, "Only a super user may attempt to increase the priority of a process");
+#endif
 		RETURN_FALSE;
 	}
 
