@@ -175,3 +175,5 @@
 #define HAVE_GETRUSAGE
 
 #define HAVE_FTOK 1
+
+#define HAVE_NICE
