@@ -5,8 +5,9 @@ PHP                                                                        NEWS
 - Core:
   . Removed the sql.safe_mode directive. (Kalle)
   . Fixed bug #54535 (WSA cleanup executes before MSHUTDOWN). (Kalle)
-  . Implemented bug #69791 (Disallow mail header injections by extra headers)
+  . Implemented FR #69791 (Disallow mail header injections by extra headers)
     (Yasuo)
+  . Implemented FR #49806 (proc_nice() for Windows). (Kalle)
 
 - EXIF:
   . Added support for vendor specific tags for the following formats:
